<resources>
    <string name="app_name">SadebProvider</string>
    <string name="enter_Name">Enter Name</string>
    <string name="enter_surname">Enter Surname</string>
    <string name="text_register_no">Enter No</string>
    <string name="text_register_right_no">Please enter a valid mobile number</string>
    <string name="text_register_correct_email">Enter Correct Email</string>
    <string name="text_register_password">Enter Long Password</string>
    <string name="text_register_not_matched">Password Not Matched</string>
    <string name="exist">You Don\'t Exist</string>
    <string name="text_register_term">Accept Term And Condition</string>
    <string name="enter_Service_Name">Enter Service Name</string>
    <string name="enter_Service_Price">Enter Service Price</string>
    <string name="enter_Service_Offer">Enter Service Offer</string>
    <string name="choose_category">Choose Category</string>
    <string name="enter_Service_time">Enter Service Time</string>
    <string name="enter_Service_customization">Enter Service Customization</string>
    <string name="enter_Service_description">Enter Service Description</string>
    <string name="monday_opening">Monday Opening Time selected</string>
    <string name="text_opening_tuesday">Tuesday Opening Time selected</string>
    <string name="text_opening_Wednesday">Wednesday Opening Time selected</string>
    <string name="text_opening_Thursday">Thursday Opening Time selected</string>
    <string name="text_Opening_Friday">Friday Opening Time selected</string>
    <string name="text_opening_Saturday">Saturday Opening Time selected</string>
    <string name="text_opening_Sunday">Sunday Opening Time selected</string>
    <string name="text_close_Monday">Monday Close Time Selected</string>
    <string name="text_close_tues">Tuesday Close Time Selected</string>
    <string name="text_close_Wednesday">Wednesday Close Time Selected</string>
    <string name="test_close_Thursday">Thursday Close Time Selected</string>
    <string name="test_close_Friday">Friday Close Time Selected</string>
    <string name="text_close_Saturday">Saturday Close Time Selected</string>
    <string name="text_close_Sunday">Sunday Close Time Selected</string>
    <string name="weeklyoff">Select Weekly Off Day</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_pass">Enter Password</string>
    <string name="enter_conf">Enter Confirm Password</string>
    <string name="user_name">User Name:- %1$s</string>
    <string name="start">start :- %1$s</string>
    <string name="end">end:- %1$s</string>
    <string name="add_service">Add Service</string>
    <string name="add_photo">Add Photo</string>
    <string name="next">Next</string>
    <string name="one_image_must_be_select">One Image Must Be Select</string>
    <string name="please_enter_estimate_time">Please enter estimate time</string>
    <string name="service_name">Service Name</string>
    <string name="service_price">Service Price</string>
    <string name="service_offer">Service Offer</string>
    <string name="estimate_time">Estimate Time</string>
    <string name="services_time">Services Time</string>
    <string name="customization">Customization</string>
    <string name="description">Description</string>
    <string name="add_time_slot">Add Time Slot</string>
    <string name="weekly_close">Weekly Close</string>
    <string name="opening_timing">Opening Timing</string>
    <string name="close_timing">Close Timing</string>
    <string name="time_slot_added_successfully">Time Slot Added Successfully</string>
    <string name="add_user">Add User</string>
    <string name="add_client">Add Client</string>
    <string name="client_details">Client Details</string>
    <string name="user_name_">User Name</string>
    <string name="please_enter_user_name">Please enter user name</string>
    <string name="user_email">User Email</string>
    <string name="please_enter_user_email">Please enter user email</string>
    <string name="please_enter_client_code">Please enter Cient Code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_mobile_no">enter mobile no</string>
    <string name="password">Password</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="user_successfully_added">User Successfully added</string>
    <string name="client_successfully_added">Client Successfully added</string>
    <string name="all_users">All Users</string>
    <string name="please_select_at_least_one_user">Please select at least one user</string>
    <string name="user_removed_successfully">User removed successfully</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email_and_will_send_your_instruction_on_how_to_reset_your_password">Enter your email and will send your instruction on How to reset your password</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="password_sent_to_email">Password %1$s sent to your registered email</string>
    <string name="add_account_info">Add Account Info</string>
    <string name="id_verification">ID Verification</string>
    <string name="a_government_id_helps_us_check_that_you_re_really_you_it_also_helps_us_keep_secure_fight_fraud_and_more">A government ID helps us check that you’re really you. It also helps us keep secure, fight fraud, and more.</string>
    <string name="please_select_image">Please select image</string>
    <string name="admin_will_be_approved_soon">Your id has been sent to admin will be approved soon</string>
    <string name="invite_your_friends">Invite Your friends</string>
    <string name="refer_friends_to_get_ahed_in_the_n_queu_5_friends">Refer friends to get ahed in the<br />(queu (5 friends))</string>
    <string name="just_share_this_code_with_your_friends_and_ask_them_to_signup_and_add_this_code_both_of_you_will_get_ahead_of_the_waitlist">Just share this code with your friends and ask them to signup and add this code.Both of you will get ahead of the waitlist.</string>
    <string name="share_code">Share Code</string>
    <string name="skip">Skip</string>
    <string name="wellcome_back_to">Welcome to the administrative and appointment systems for beauty salons, barber shops and entrepreneurs</string>
    <string name="login">Login</string>
    <string name="forgot_password_">Forgot Password ?</string>
    <string name="don_t_have_a_account">Don’t have a account ?</string>
    <string name="account">Account</string>
    <string name="services">Services</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="we_have_successfully_sent_password_to_your_nto_your_registered_email">We have successfully sent password to your<br />to your registered email</string>
    <string name="go_to_login">go to login</string>
    <string name="please_enter_otp">Please enter otp</string>
    <string name="please_enter_4_digit_otp">Please enter 4 digit otp</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition">I agree to the terms and condition</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="service_detail">Service Detail</string>
    <string name="category_name">Category Name</string>
    <string name="all_service_users">All Service Users</string>
    <string name="back">Back</string>
    <string name="change_email">Change Email</string>
    <string name="we_will_send_verification_to_your_new_email">we will send verification to your new Email</string>
    <string name="other">Other</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="provider_name">Provider Name</string>
    <string name="adin_name">Administrator Name</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">New Password Again</string>
    <string name="phone_number">Phone Number</string>
    <string name="please_enter_right_old_password">Please enter right old password</string>
    <string name="we_have_successfully_sent_your_id_nto_admin">We have successfully sent your ID<br /> to Admin...</string>
    <string name="link_sent_to_email">A link has been sent to your email to activate your business account</string>
    <string name="invite_friends">Invite friends</string>
    <string name="logout">Logout</string>
    <string name="no_product_found">There are no Scheduled Services</string>
    <string name="no_notification_found">No notification found</string>
    <string name="my_service">My Service</string>
    <string name="accepted">Accepted</string>
    <string name="add_new_category">Add New Category</string>
    <string name="add_category">Add Category</string>
    <string name="field_required">Field Required</string>
    <string name="category_added_successfully">Category added successfully</string>
    <string name="offer_home_delivery">Offer home delivery</string>
    <string name="landline">LandLine</string>
    <string name="business_address">Business Address</string>
    <string name="business_name">Business Name</string>
    <string name="business_type">Business Type</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="enter_business_name">Enter Business Name</string>
    <string name="enter_business_address">Enter Business Address</string>
    <string name="press_once_again_to_exit">Press once again to exit</string>
    <string name="business_detail">Business Detail</string>
    <string name="are_you_sure_you_wanted_to_delete">Are you sure, You wanted to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure, you want to logout?</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="gallery">Gallery</string>
    <string name="language">Language</string>
    <string name="billing">Billing</string>
    <string name="time_slot">Time slot</string>
    <string name="price">Price:- </string>
    <string name="billing_graph_view">Billing Graph View</string>
    <string name="business_registration_date">Business registration date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="invoice">Invoice</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="personal_information">Personal information</string>
    <string name="financial_data">Financial data</string>
    <string name="enter_ruc">Enter RUC</string>
    <string name="cient_code">Cient Code</string>
    <string name="enter">Please Enter</string>
    <string name="enter_client_code">Please Enter Cient Code</string>
    <string name="convenio">Agreement</string>
    <string name="descuento">Discount</string>
    <string name="observaciones">Observation</string>
    <string name="search_client">Search Client</string>
    <string name="clients">Clients</string>
    <string name="client_creation">Client Creation</string>
</resources>