<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:background="@drawable/gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:orientation="vertical">

                <ImageView
                    android:padding="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:id="@+id/iv_Logo"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo_one" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/wellcome_back_to"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/_22sdp" />

                <TextView
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/_22sdp" />

                <TextView
                    android:paddingLeft="@dimen/_3sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/edt_bg">

                    <EditText
                        android:id="@+id/et_Email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:inputType="textEmailAddress"
                        android:maxLength="30"
                        android:padding="@dimen/_12sdp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_13sdp" />

                </RelativeLayout>


                <TextView
                    android:paddingLeft="@dimen/_3sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/edt_bg">

                    <EditText
                        android:id="@+id/et_Password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:padding="@dimen/_12sdp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_13sdp" />

                </RelativeLayout>


                <TextView
                    android:id="@+id/loginID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_Logo"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/bg_blue_border"
                    android:elevation="@dimen/_1sdp"
                    android:layout_marginHorizontal="@dimen/_1sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/sign_in"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:id="@+id/button_fotgotAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/_15sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:paddingTop="@dimen/_8sdp"
                    android:text="@string/forgot_password_"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_marginVertical="@dimen/_20sdp"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/don_t_have_a_account"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/reg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:text="@string/sign_up"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


        <include
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/loader"
            android:id="@+id/loader_layout"/>

    </RelativeLayout>

</layout>