<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:background="@drawable/gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity">

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/RR_toolbaar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp">

            <ImageView
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/_5sdp"
                android:id="@+id/iv_Back"
                android:layout_centerInParent="true"
                android:src="@drawable/backnew"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp">

            </ImageView>

            <TextView
                android:layout_marginLeft="@dimen/_20sdp"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:id="@+id/sihn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/invite_your_friends"
                android:textColor="@color/dark"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_below="@+id/RR_toolbaar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >


                <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/refer_friends_to_get_ahed_in_the_n_queu_5_friends"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="normal" />


                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/invite"
                    android:elevation="@dimen/_10sdp"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_200sdp"
                    >

                </de.hdodenhof.circleimageview.CircleImageView>

                <TextView
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/just_share_this_code_with_your_friends_and_ask_them_to_signup_and_add_this_code_both_of_you_will_get_ahead_of_the_waitlist"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="normal" />


                <LinearLayout
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp">


                    <TextView
                        android:background="@drawable/bg_code"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins_regular"
                        android:text="MARTHA035"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="normal"
                        />

                    <TextView
                        android:background="@drawable/bg_code1"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/share_code"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="normal"
                        />


                </LinearLayout>

                <TextView
                    android:id="@+id/tv_Skip"
                    android:layout_margin="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/skip"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="normal"
                    />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>



    </RelativeLayout>

</layout>