<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:background="@drawable/gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_Back"
                     android:padding="@dimen/_5sdp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/backnew"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp">

                </ImageView>


                <ImageView
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:id="@+id/iv_Logo"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo" />


                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_email_and_will_send_your_instruction_on_how_to_reset_your_password"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:paddingLeft="@dimen/_3sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/edt_bg">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:id="@+id/et_Email"
                        android:inputType="text"
                        android:maxLength="30"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_13sdp" />

                </RelativeLayout>




                <TextView
                    android:id="@+id/loginID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_Logo"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/bg_blue_border"
                    android:elevation="@dimen/_1sdp"
                    android:layout_marginHorizontal="@dimen/_1sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/_1sdp"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/send"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <include
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/loader"
            android:id="@+id/loader_layout"/>


    </RelativeLayout>

</layout>